--- a/src/main/webapp/myrental/src/app/app.component.html
+++ b/src/main/webapp/myrental/src/app/app.component.html
@@ -33,22 +33,22 @@
           </div>
           <h1>Book a Room</h1>
 
-          <form action="form-horizontal">
+          <form action="form-horizontal" [formGroup]="roomsearch" (ngSubmit)="onSubmit(roomsearch)">
             <div class="form-group">
             <label for="checkin" class="col-4">Check-In: </label>
-            <div class="col-8">
-              <input id="checkin" type="date" class="form-control">
+            <div class=" col-12">
+              <input id="checkin" type="date" class="form-control"formControlName="checkin">
             </div>
           </div>
             <div class="form-group">
               <label for="checkout" class="col-4">Check-Out: </label>
-              <div class="col-8">
-                <input id="checkout" type="date" class="form-control">
+              <div class="col-12">
+                <input id="checkout" type="date" class="form-control" formControlName="checkout">
               </div>
             </div>
 
             <div class="form-group">
-              <div class="col-offset-2 col-10">
+              <div class="col-12">
                 <button type="submit" class="btn btn-primary btn-lg">Submit</button>
               </div>
             </div>
@@ -57,6 +57,23 @@
         
       </div>
 
+      <div class="row">
+        <div class="col-12">
+          <div class="table-responsive">
+            <table class="table">
+              <tbody>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+
+      
     </article>
   </div><!-- welcome -->
   <div class="scene" id="hotelinfo">
